# crabtalk

./: .gitignore  404.html  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  index.html  install.sh  introduction.html  manifesto.html  print.html  searcher-c2a407aa.js  searchindex-1688d608.js  searchindex-21ff07ff.js  toc-0568fcff.js  toc-48fce9c2.js  toc-d16faba6.js  toc.html
.github/workflows/: docs.yml  main.yml  release.yml
app/cli/: Cargo.toml
app/cli/src/cmd/: agent.rs  download.rs  mod.rs
app/cli/src/runner/: gateway.rs
app/client/src/: connection.rs
app/daemon/: Cargo.toml  README.md
app/daemon/src/: config.rs  cron.rs  hook.rs  lib.rs  loader.rs
app/daemon/src/config/: loader.rs  mod.rs
app/daemon/src/daemon/: builder.rs  mod.rs  protocol.rs
app/daemon/src/feature/: mcp.rs  mod.rs  skill.rs
app/daemon/src/gateway/: builder.rs  channel.rs  dispatch.rs  mod.rs  serve.rs  server.rs  uds.rs
app/daemon/src/loader/: agent.rs  cron.rs  mod.rs
app/protocol/: Cargo.toml
app/protocol/src/: error.rs  lib.rs
apps/daemon/: Cargo.toml
apps/daemon/src/: attach.rs  external.rs  foreground.rs  service.rs
apps/hub/src/: package.rs
apps/memory/: README.md
apps/memory/src/: tool.rs
apps/search/src/: tool.rs
apps/telegram/: Cargo.toml
apps/telegram/src/: config.rs  lib.rs  serve.rs
apps/tui/: Cargo.toml  README.md
apps/wechat/: Cargo.toml
apps/wechat/src/: config.rs  lib.rs  serve.rs
channel/telegram/: Cargo.toml
channel/telegram/src/: lib.rs
crates/bench/: Cargo.toml
crates/bench/benches/: agent.rs  bm25.rs  conversation.rs  framework.rs
crates/bench/src/: mock_mcp.rs
crates/channel/: Cargo.toml  README.md
crates/channel/src/: channel.rs  command.rs  lib.rs  message.rs  router.rs  spawn.rs  telegram.rs
crates/channel/src/discord/: command.rs
crates/channel/src/telegram/: command.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: lib.rs
crates/command-codegen/src/: lib.rs
crates/command/src/: lib.rs
crates/core/: Cargo.toml  README.md  build.rs
crates/core/prompts/: compact.md  memory.md
crates/core/proto/: crabtalk.proto  ext.proto
crates/core/src/: dispatch.rs  event.rs  hook.rs  lib.rs  model.rs  paths.rs  storage.rs  utils.rs
crates/core/src/agent/: builder.rs  compact.rs  config.rs  event.rs  mod.rs  parser.rs  tool.rs
crates/core/src/config/: manifest.rs  provider.rs
crates/core/src/memory/: mod.rs  tools.rs
crates/core/src/model/: message.rs  request.rs  response.rs  tool.rs
crates/core/src/protocol/: ext.rs  mod.rs  proto.rs
crates/core/src/protocol/api/: client.rs  mod.rs  server.rs
crates/core/src/protocol/message/: client.rs  convert.rs  mod.rs  server.rs
crates/core/src/repos/: memory.rs  mod.rs  sessions.rs  skills.rs
crates/core/src/runtime/: hook.rs  mod.rs  session.rs
crates/core/tests/: agent.rs  conversation.rs  history_pinning.rs  runtime.rs
crates/crabtalk/: Cargo.toml  README.md
crates/crabtalk/src/daemon/: builder.rs
crates/crabtalk/src/mcp/: bridge.rs  dispatch.rs  mod.rs
crates/crabtalk/src/protocol/: admin.rs  plugin.rs
crates/crabtalk/tests/: config.rs  file.rs  memory.rs
crates/daemon/: Cargo.toml  README.md  config.toml
crates/daemon/prompts/: skill-master.md  system.md  walrus.md
crates/daemon/src/: cron.rs  event_bus.rs  hook.rs  lib.rs
crates/daemon/tests/: config_parsing.rs
crates/gateway/src/: stream.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
crates/memory/: Cargo.toml  README.md
crates/memory/src/: embedder.rs  lib.rs  tools.rs
crates/model/: Cargo.toml  README.md
crates/model/local/: download.rs  mod.rs  provider.rs
crates/model/remote/: http.rs  mod.rs
crates/model/remote/claude/: mod.rs  provider.rs  stream.rs
crates/model/remote/openai/: mod.rs  provider.rs
crates/model/src/: config.rs  convert.rs  http.rs  lib.rs  manager.rs  provider.rs
crates/model/src/claude/: provider.rs
crates/model/src/local/: download.rs  mod.rs
crates/model/src/openai/: mod.rs  provider.rs
crates/node/: Cargo.toml
crates/node/src/: cron.rs  delegate.rs  lib.rs
crates/node/tests/: config.rs  config_parsing.rs  file_tools.rs  memory.rs
crates/protocol/: Cargo.toml
crates/protocol/src/api/: client.rs  server.rs
crates/protocol/src/message/: client.rs  mod.rs  server.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime/examples/: agent.rs  memory.rs  tools.rs
crates/runtime/examples/common/: mod.rs
crates/runtime/src/: config.rs  conversation.rs  engine.rs  env.rs  hook.rs  host.rs  lib.rs
crates/runtime/src/engine/: agents.rs  conversation.rs  execution.rs  mod.rs
crates/runtime/src/memory/: entry.rs  mod.rs
crates/runtime/src/os/: edit.rs  mod.rs  read.rs
crates/runtime/tests/: dispatch.rs  engine.rs  file_tools.rs  skill_handler.rs
crates/skill/: Cargo.toml
crates/skill/src/: lib.rs  loader.rs
crates/socket/: Cargo.toml  README.md
crates/socket/src/: client.rs  lib.rs  server.rs
crates/system/: Cargo.toml
crates/system/src/: lib.rs
crates/system/src/cron/: client.rs  hook.rs  mod.rs
crates/system/src/mcp/: mod.rs
crates/system/src/skill/: loader.rs  mod.rs
crates/tools/: Cargo.toml
crates/tools/src/: ask_user.rs  lib.rs  os.rs
crates/tools/src/memory/: handlers.rs  mod.rs
crates/tools/src/skill/: handler.rs
hook/cron/: Cargo.toml
hook/cron/src/: hook.rs  lib.rs  parser.rs
hook/mcp/: Cargo.toml
hook/skill/: Cargo.toml
plugins/command/: Cargo.toml
plugins/outlook/: Cargo.toml
plugins/search/: Cargo.toml
protocol/channel/: Cargo.toml
protocol/channel/src/: lib.rs  menu.rs  router.rs
protocol/socket/: Cargo.toml
protocol/socket/src/: client.rs  lib.rs  server.rs
rfcs/: 0000-compaction.html  0009-transport.html  0018-protocol.html  0027-model.html  0036-skill.html  0038-memory.html  0043-component.html  0064-session.html  0075-hook.html  0078-compact-session.html  0080-cron.html  0082-scoping.html  0121-event-bus.html  0135-agent-first.html  0150-memory-store.html  superseded.html
scripts/: publish.py
(+95 files in other folders)
