[workspace]
resolver = "3"
members = ["crates/*", "protocol/*", "channel/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["clearloop <tianyi.gc@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/openwalrus/walrus"
keywords = ["llm", "agent", "ai"]

[workspace.dependencies]
wcore = { path = "crates/core", package = "walrus-core", version = "0.0.1" }
model = { path = "crates/model", package = "walrus-model", version = "0.0.1" }
runtime = { path = "crates/runtime", package = "walrus-runtime", version = "0.0.1" }
memory = { path = "hook/memory", package = "walrus-memory", version = "0.0.1" }
skill = { path = "hook/skill", package = "walrus-skill", version = "0.0.1" }
mcp = { path = "hook/mcp", package = "walrus-mcp", version = "0.0.1" }
wcron = { path = "hook/cron", package = "walrus-cron", version = "0.0.1" }
channel = { path = "protocol/channel", package = "walrus-pchannel", version = "0.0.1" }
protocol = { path = "crates/protocol", package = "walrus-protocol", version = "0.0.1" }
socket = { path = "protocol/socket", package = "walrus-socket", version = "0.0.1" }
telegram = { path = "channel/telegram", package = "walrus-telegram", version = "0.0.1" }
channel_router = { path = "channel/router", package = "walrus-channel-router", version = "0.0.1" }
daemon = { path = "crates/daemon", package = "walrus-daemon", version = "0.0.1" }
cli = { path = "crates/cli", package = "walrus-cli", version = "0.0.1" }

# crates.io
anyhow = "1"
async-stream = "0.3"
compact_str = { version = "0.8", features = ["serde"] }
futures-core = "0.3"
futures-util = "0.3"
hf-hub = { version = "0.5.0", features = ["tokio"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
rmcp = { version = "0.16", features = ["client", "transport-child-process"] }
rusqlite = { version = "0.34", features = ["bundled"] }
schemars = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
smallvec = { version = "1", features = ["serde"] }
tempfile = "3"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "io-util",
    "net",
    "sync",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
cron = "0.15"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
rustyline = { version = "15", features = ["derive"] }
crossterm = "0.29"
dirs = "6"
mistralrs = { version = "0.7", default-features = false }

[profile.prod]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false
strip = true

[workspace.metadata.conta]
packages = [
    "core",
    "model",
    "memory",
    "channel",
    "runtime",
    "protocol",
    "daemon",
    "cli",
]
