[package]
name = "walrus-daemon"
description = "The Walrus daemon"
documentation = "https://docs.rs/walrus-daemon"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = ["local"]
local = ["model/local"]
metal = ["model/metal"]
cuda = ["model/cuda"]

[[bin]]
name = "walrusd"
path = "src/bin/main.rs"

[dependencies]
async-stream = { workspace = true }
runtime = { workspace = true }
wcore = { workspace = true }
model = { workspace = true }
memory = { workspace = true }
skill = { workspace = true }
mcp = { workspace = true }
protocol = { workspace = true }
socket = { workspace = true }
channel = { workspace = true }
telegram = { workspace = true }
compact_str = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
cron = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
