[package]
name = "walrus-telegram"
description = "Telegram channel adapter for Walrus"
documentation = "https://docs.rs/walrus-telegram"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
channel = { workspace = true }
anyhow = { workspace = true }
compact_str = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
