[package]
name = "walrus-channel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
wcore.workspace = true
anyhow.workspace = true
compact_str.workspace = true
futures-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
