[package]
name = "walrus-core"
description = "Walrus agent library"
documentation = "https://docs.rs/walrus-core"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
compact_str.workspace = true
futures-core.workspace = true
futures-util.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
smallvec.workspace = true
tokio.workspace = true
tracing.workspace = true
