[package]
name = "crabtalk"
description = "Crabtalk library"
documentation = "https://docs.rs/crabtalk-node"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
plugin.workspace = true
command.workspace = true
crabllm-core.workspace = true
crabllm-provider.workspace = true
runtime.workspace = true
transport.workspace = true
wcore.workspace = true

# crates.io
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
cron.workspace = true
async-stream.workspace = true
futures-core.workspace = true
futures-util.workspace = true
rand.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
tokio.workspace = true
tracing.workspace = true

# optional dependencies
toml = { workspace = true, optional = true }
toml_edit = { workspace = true, optional = true }
ulid = { workspace = true, optional = true }

[features]
default = ["fs", "native-tls"]
fs = ["dep:toml", "dep:toml_edit", "dep:ulid"]
native-tls = ["reqwest/native-tls", "crabllm-provider/native-tls"]
rustls = ["reqwest/rustls", "crabllm-provider/rustls"]

[dev-dependencies]
tempfile.workspace = true
wcore = { workspace = true, features = ["testing"] }
