[package]
name = "walrus-model"
description = "Walrus LLM provider implementations"
documentation = "https://docs.rs/walrus-model"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = ["local"]
local = ["dep:mistralrs", "dep:dirs", "dep:hf-hub"]
metal = ["local", "mistralrs/metal"]
cuda = ["local", "mistralrs/cuda"]

[dependencies]
wcore.workspace = true
anyhow.workspace = true
async-stream.workspace = true
compact_str.workspace = true
futures-core.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
dirs = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
mistralrs = { workspace = true, optional = true }
