[package]
name = "walrus-protocol"
description = "Wire protocol for Walrus daemon communication"
documentation = "https://docs.rs/walrus-protocol"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
async-stream = { workspace = true }
compact_str = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
