[package]
name = "walrus-runtime"
description = "Walrus runtime"
documentation = "https://docs.rs/walrus-runtime"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
wcore.workspace = true
memory.workspace = true

# crates-io dependencies
anyhow.workspace = true
async-stream.workspace = true
compact_str.workspace = true
futures-core.workspace = true
futures-util.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
model.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
chrono.workspace = true
serde_json.workspace = true
