[package]
name = "walrus-socket"
description = "Unix domain socket transport for Walrus daemon communication"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
wcore.workspace = true
# crates.io
anyhow.workspace = true
async-stream.workspace = true
futures-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
