[package]
name = "walrus-cron"
description = "Cron scheduler protocol client and hook for Walrus agents"
documentation = "https://docs.rs/walrus-cron"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
protocol.workspace = true
runtime.workspace = true
wcore.workspace = true
compact_str.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
cron.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
futures-core.workspace = true
futures-util.workspace = true
