[package]
name = "walrus-socket"
description = "Unix domain socket transport for Walrus protocol"
documentation = "https://docs.rs/walrus-socket"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
protocol = { workspace = true }
async-stream = { workspace = true }
anyhow = { workspace = true }
compact_str = { workspace = true }
dirs = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
